# Sensor-Viewer

./: .prettierrc  LICENSE  README.md  README.zh_CN.md  index.html  package-lock.json  package.json  tailwind.config.js  test.js  vite.config.js
.github/workflows/: main.yml
src/: App.jsx  main.jsx  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Panel.jsx  Viewer.jsx
src/components/sensor/: Pcd.jsx  PcdConfig.jsx  SensorCard.jsx  SensorConfig.jsx  SensorTabs.jsx  SensorTree.jsx
src/components/svg/: Sensor.jsx
src/i18/: i18.js
src/i18/locales/: en.json  zh.json
src/i18n/locales/: en.json  zh.json
src/store/: SensorStore.js
src/utils/: findPathToTarget.js  handleDampling.js
