[package]
name = "sensor-viewer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "fs-write-file", "global-shortcut-all", "fs-read-file", "fs-read-dir", "path-all", "dialog-save", "dialog-open", "dialog-confirm", "window-close", "window-center", "dialog-message", "dialog-ask", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
serde_yaml = "0.9.27"
maplit = "1.0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
